--- a/PMA.Forms/PMA.Forms.Droid/packages.config
+++ b/PMA.Forms/PMA.Forms.Droid/packages.config
@@ -3,6 +3,7 @@
   <package id="MvvmCross" version="4.1.0" targetFramework="monoandroid60" />
   <package id="MvvmCross.Binding" version="4.1.0" targetFramework="monoandroid60" />
   <package id="MvvmCross.Core" version="4.1.0" targetFramework="monoandroid60" />
+  <package id="MvvmCross.Forms.Presenter" version="4.1.0" targetFramework="monoandroid60" />
   <package id="MvvmCross.Platform" version="4.1.0" targetFramework="monoandroid60" />
   <package id="Xamarin.Android.Support.Design" version="23.0.1.3" targetFramework="monoandroid60" />
   <package id="Xamarin.Android.Support.v4" version="23.0.1.3" targetFramework="monoandroid60" />
