--- a/PMA.Forms/PMA.Forms/packages.config
+++ b/PMA.Forms/PMA.Forms/packages.config
@@ -3,6 +3,7 @@
   <package id="MvvmCross" version="4.1.0" targetFramework="portable45-net45+win8+wpa81" />
   <package id="MvvmCross.Binding" version="4.1.0" targetFramework="portable45-net45+win8+wpa81" />
   <package id="MvvmCross.Core" version="4.1.0" targetFramework="portable45-net45+win8+wpa81" />
+  <package id="MvvmCross.Forms.Presenter" version="4.1.0" targetFramework="portable45-net45+win8+wpa81" />
   <package id="MvvmCross.Platform" version="4.1.0" targetFramework="portable45-net45+win8+wpa81" />
-  <package id="Xamarin.Forms" version="2.0.0.6482" targetFramework="portable45-net45+win8+wpa81" />
+  <package id="Xamarin.Forms" version="2.1.0.6529" targetFramework="portable45-net45+win8+wpa81" />
 </packages>
